@@ -1,3 +1,11 @@
+2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * EcProcess.m: Improve handling of signals ... quit process after the
+        next event when an unexpected signal is caught.
+
+2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcCommand.m:
 2012-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* EcLogger.m (+loggerForType): Fix wrong receiver when registering
